XTIDE Universal BIOS v1.1.4 (24 August 2010)
  * Correct number of drives is now returned from AH=08h when it is redirected to foreign BIOS.
  * Interrupt controllers are now unmasked during drive reset.
  * OS hooks are now enabled for all builds. IRQ waiting no longer uses HLT instruction to fix some EMM386 and VCPI issues.
  * XT+ build is no more since it would now be the same as AT build


XTIDE Universal BIOS v1.1.3 (1 August 2010)
  * v1.1.1 broke booting from foreign drives, it is now fixed.
  * Improved error handling a bit.
  * Longer DRQ and IRQ timeouts to minimize write timouts with some (bad) CF cards.
  * Default boot menu drive should now be properly selected.


XTIDE Universal BIOS v1.1.2 (26 July 2010, no public release)
  * Fixed a bug where Disk Parameter Table was accessed with wrong pointer register after writing last block.
  * Cleaned AH=00h, Disk Controller Reset a bit.


XTIDE Universal BIOS v1.1.1 (19 July 2010)
*Booting is now possible from hard disks if floppy controller reset fails
 since AH=00h, Disk Controller Reset now returns error code for the
 requested drive only.
*Now assembles with Yasm.


XTIDE Universal BIOS v1.1.0 (first stable release, 2 May 2010)
*Lite and full operating modes
*Diagnostic cylinder no longer has to be reserved
*Slave drives again work without master present
*32-bit transfers for VLB and PCI IDE controllers
*16- and 32-bit transfers are enabled on all builds
*Boot menu hotkeys for all drives
*Drive swapping is handled separately for floppy and hard disk drives so it
 is now possible to install DOS to any hard disk from any floppy drive
*INT 13h,AH=15h return value in DL now longer gets corrupted by drive swapping
*Rewritten drive detection and lots of code cleaning
*Longer timeout when detecting first drive
*Minimum number of floppy drives can be specified if autodetection fails
*Maybe other changes that i have forgotten

XTIDE Universal BIOS v1.1.0 configuration and flashing program (idecfg.com)